chore: implement baseline model fine tuning, add inline tensorboard

--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -8,3 +8,6 @@ stable-baselines3==2.3.0
 moviepy==1.0.3
 ipywidgets==8.1.2
 tensorboard==2.16.2
+torch-tb-profiler==0.4.3
+optuna==3.6.1
+optuna-dashboard==0.15.1
