--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -1,13 +1,17 @@
+notebook==7.1.3
+nbconvert==7.16.3
 gymnasium==0.29.1
 highway-env==1.8.2
 matplotlib==3.8.4
 numpy==1.26.4
-tensorflow==2.16.1
+tensorflow==2.15.0
 imageio==2.34.0
 stable-baselines3==2.3.0
 moviepy==1.0.3
+ffmpeg==1.4
+decorator==4.4.2
 ipywidgets==8.1.2
-tensorboard==2.16.2
+tensorboard==2.15.0
 torch-tb-profiler==0.4.3
 optuna==3.6.1
 optuna-dashboard==0.15.1
